# grantd-io

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Grantd Product Manifest.md  README.md  SECURITY.md  docker-compose.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-api.yml  deploy-web.yml
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/src/: __init__.py  config.py  dependencies.py  main.py
apps/api/src/auth/: cognito.py  permissions.py
apps/api/src/models/: database.py  schemas.py
apps/api/src/routers/: auth.py  changesets.py  connections.py  objects.py  organizations.py  sync.py
apps/api/src/services/: sql_generator.py
apps/api/src/services/sync/: base.py  factory.py  service.py  snowflake.py
apps/web/: .env.example  Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/pages/: CanvasPage.tsx  ChangesetsPage.tsx  ConnectionsPage.tsx  DashboardPage.tsx  (+10 more)
infra/: main.tf
infra/environments/dev/: main.tf
infra/environments/prod/: main.tf
infra/modules/cognito/: main.tf
infra/modules/eventbridge/: main.tf
infra/modules/lambda/: main.tf
infra/modules/parameter-store/: main.tf
migrations/: 001_initial_schema.sql  002_connections.sql  003_platform_objects.sql  004_changesets.sql  005_audit.sql  006_dev_credentials.sql  007_role_type_and_sync_progress.sql
scripts/: run_migrations.py
(+28 files in other folders)
